# service/api/searchUser.go
@@ -3,6 +3,7 @@ package api
 import (
 	"encoding/json"
 	"net/http"
+	"strconv"
 
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
@@ -13,11 +14,17 @@ type User struct {
 	Username string `json:"username"`
 }
 
+type Info struct {
+	UserId        int    `json:"user_id"`
+	Username      string `json:"username"`
+	AvatarProfile Upload `json:"avatar"`
+}
+
 func (rt *_router) searchUser(w http.ResponseWriter, r *http.Request, params httprouter.Params, context reqcontext.RequestContext) {
 	w.Header().Set("Content-Type", "application/json")
 
-	username := params.ByName("username")
-	if username == "" {
+	paramUserID := r.URL.Query().Get("userId")
+	if paramUserID == "" {
 		dbUsers, err := rt.db.Users()
 		if err != nil {
 			context.Logger.WithError(err).Error("Error converting userId to int")
@@ -25,11 +32,17 @@ func (rt *_router) searchUser(w http.ResponseWriter, r *http.Request, params htt
 			return
 
 		}
-		var users []User
+		var users []Info
 		for _, u := range dbUsers {
-			users = append(users, User{
+			users = append(users, Info{
 				UserId:   u.UserId,
 				Username: u.Username,
+				AvatarProfile: Upload{
+					Url:    u.Avatar.Url,
+					Mime:   u.Avatar.Mime,
+					Width:  u.Avatar.Width,
+					Height: u.Avatar.Height,
+				},
 			})
 		}
 		err = json.NewEncoder(w).Encode(users)
@@ -39,17 +52,24 @@ func (rt *_router) searchUser(w http.ResponseWriter, r *http.Request, params htt
 			return
 		}
 	} else {
-		dbUsers, err := rt.db.UsersBySearch(username)
+		paramUserIDInt, err := strconv.Atoi(paramUserID)
+		dbUsers, err := rt.db.GetUserById(paramUserIDInt)
 		if err != nil {
 			context.Logger.WithError(err).Error("Error converting userId to int")
 			http.Error(w, http.StatusText(http.StatusBadRequest), http.StatusBadRequest)
 			return
 		}
-		var users []User
+		var users []Info
 		for _, u := range dbUsers {
-			users = append(users, User{
+			users = append(users, Info{
 				UserId:   u.UserId,
 				Username: u.Username,
+				AvatarProfile: Upload{
+					Url:    u.Avatar.Url,
+					Mime:   u.Avatar.Mime,
+					Width:  u.Avatar.Width,
+					Height: u.Avatar.Height,
+				},
 			})
 		}
 		err = json.NewEncoder(w).Encode(users)
